--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,10 @@
   outline: none !important;
   list-style: none;
 }
+body {
+  color: rgb(204, 194, 194);
+  line-height: 1.3;
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  overflow-x: hidden !important;
+}
