--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   font-family: "Open Sans", sans-serif;
   overflow-x: hidden !important;
 }
-.body .titulo:before {
+.body .title:before {
   background: #c49b56;
 }
 .body .nav-scroll {
@@ -31,7 +31,7 @@ body {
 .body .nav-scroll .logo:hover {
   color: rgb(204, 190, 190);
 }
-.body .historia .historia-img:after {
+.body .history .history-img:after {
   background: #181818;
 }
 h1,
@@ -58,6 +58,10 @@ img {
   height: auto;
 }
 
+figure{
+  margin-top: 13px;
+  color: rgb(122, 109, 109);
+}
 
 span,
 a,
@@ -65,4 +69,795 @@ a:hover {
   display: inline-block;
   text-decoration: none;
   color: inherit;
+}
+
+.section-head {
+  text-align: center;
+  margin-bottom: 80px;
+}
+
+.title {
+  display: inline-block;
+  font-size: 36px;
+  padding-bottom: 10px;
+  position: relative;
+  z-index: 2;
+}
+.title:after {
+  content: "";
+  width: 60px;
+  height: 1px;
+  background: #c49b66;
+  position: absolute;
+  bottom: 0;
+  left: calc(50% - 30px);
+}
+.title:before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  color:   #c49b66;
+  background: #c49b66;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.title_position {
+  text-align: left;
+  margin-bottom: 30px;
+}
+.title_position:after {
+  left: 0;
+}
+
+.bg-gray {
+  background: #f7f7f7;
+}
+.bg-gray .title:before {
+  background: #ddd;
+}
+.bg-gray .owl-theme .owl-dots .owl-dot span {
+  background: #777;
+}
+
+.o-hidden {
+  overflow: hidden;
+}
+
+.position-re {
+  position: relative;
+}
+
+.full-width {
+  width: 100% !important;
+}
+
+.bg-img {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.bg-img .title:before {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.section-padding {
+  padding: 100px 0;
+}
+
+.section-ptb {
+  padding: 80px 0;
+}
+
+.section-pt {
+  padding: 80px 0 0;
+}
+
+.section-pb {
+  padding: 0 0 80px;
+}
+
+.valign {
+  display: flex;
+  align-items: center;
+}
+
+.cd-headline {
+  font-size: 3rem;
+  line-height: 1.2;
+}
+
+@media only screen and (min-width: 768px) {
+  .cd-headline {
+    font-size: 4.4rem;
+    font-weight: 300;
+  }
+}
+
+@media only screen and (min-width: 1170px) {
+
+  .cd-headline {
+    font-size: 6rem;
+  }
+}
+
+.cd-words-wrapper {
+  display: inline-block;
+  position: relative;
+  text-align: left;
+}
+
+.cd-words-wrapper b {
+  display: inline-block;
+  position: absolute;
+  white-space: nowrap;
+  left: 0;
+  top: 0;
+}
+
+.cd-words-wrapper b.is-visible {
+  position: relative;
+}
+
+.no-js .cd-words-wrapper b {
+  opacity: 0;
+}
+
+.no-js .cd-words-wrapper b.is-visible {
+  opacity: 1;
+}
+
+.cd-headline.clip span {
+  display: inline-block;
+  padding: 0.2em 0;
+}
+
+.cd-headline.clip .cd-words-wrapper {
+  overflow: hidden;
+  vertical-align: top;
+}
+
+.cd-headline.clip .cd-words-wrapper::after {
+  content: "";
+  position: absolute;
+  top: 10%;
+  right: 0;
+  width: 2px;
+  height: 70%;
+  background-color: #aebcb9;
+}
+
+.cd-headline.clip b {
+  opacity: 0;
+}
+
+.cd-headline b.is-visible {
+  opacity: 1;
+  font-weight: 900;
+}
+
+.owl-theme .owl-dots .owl-dot span {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: rgba(150, 150, 150, 0.4);
+}
+
+.button_restaurant {
+  position: relative;
+  cursor: pointer;
+}
+.button_restaurant button,
+.button_restaurant a {
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  font-weight: 700;
+  height: 40px;
+  line-height: 40px;
+  width: 130px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+.button_restaurant button:before,
+.button_restaurant a:before {
+  content: attr(back);
+  font-family: "Font Awesome\ 5 Free";
+  font-size: 18px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: transparent;
+  color: #c49b66;
+  border: 1px solid #c49b66;
+  line-height: 38px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-transform-origin: bottom;
+  transform-origin: bottom;
+  -webkit-transform: translateY(-100%) rotateX(90deg);
+  transform: translateY(-100%) rotateX(90deg);
+}
+.button_restaurant button:after,
+.button_restaurant a:after {
+  content: attr(front);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #c49b66;
+  color: #fff;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-transform-origin: top;
+  transform-origin: top;
+  -webkit-transform: translateY(0) rotateX(0deg);
+  transform: translateY(0) rotateX(0deg);
+}
+.button_restaurant button:hover:before,
+.button_restaurant a:hover:before {
+  -webkit-transform: translateY(0) rotateX(0deg);
+  transform: translateY(0) rotateX(0deg);
+}
+.button_restaurant button:hover:after,
+.button_restaurant a:hover:after {
+  -webkit-transform: translateY(100%) rotateX(90deg);
+  transform: translateY(100%) rotateX(90deg);
+}
+
+.button_restaurant-bord button:before,
+.button_restaurant-bord a:before {
+  background: #c49b66;
+  color: #fff;
+}
+.button_restaurant-bord button:after,
+.button_restaurant-bord a:after {
+  background: transparent;
+  color: #c49b66;
+  border: 1px solid #c49b66;
+}
+
+.button_restaurant-lg button,
+.button_restaurant-lg a {
+  width: 160px;
+}
+
+.button_restaurant-dark button:before,
+.button_restaurant-dark a:before {
+  color: #222;
+  border: 1px solid #222;
+}
+.button_restaurant-dark button:after,
+.button_restaurant-dark a:after {
+  background: #222;
+}
+
+.navbar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  background: transparent;
+  z-index: 9;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  z-index: 9;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 30px;
+  height: 60px;
+}
+.logo{
+  margin-left: 20px;
+}
+.navbar .icon-bar {
+  color: #fff;
+}
+.navbar .navbar-nav .nav-link {
+  font-size: 16px;
+  font-weight: 600;
+  color: rgb(255, 251, 251);
+  letter-spacing: 0.5px;
+  margin: 15px 5px;
+  transition: all 0.5s;
+}
+.navbar .navbar-nav .active {
+  color: #c49b66 !important;
+}
+
+.nav-scroll {
+  background: #fff;
+  border-bottom: 1px solid rgba(12, 12, 12, 0.04);
+  padding: 0;
+  position: fixed;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  transition: transform 0.5s;
+  transform: translateY(100px);
+}
+.nav-scroll .icon-bar {
+  color: #222;
+}
+.nav-scroll .navbar-nav .nav-link {
+  color: #222;
+}
+.nav-scroll .logo {
+  padding: 15px 0;
+  color: #111;
+}
+.nav-scroll .logo:hover {
+  color: #111;
+}
+
+.header {
+  min-height: 100vh;
+  background-image: url("../img/img-header.png");
+}
+.header img{
+  filter: brightness(10%)
+}
+.header .caption {
+  margin-top: 50px;
+}
+.header .caption h2 {
+  font-weight: 200;
+}
+.header .caption h1 {
+  margin: 10px 0;
+  font-size: 70px;
+}
+.header .arrow {
+  position: absolute;
+  bottom: 5vh;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 15px;
+  z-index: 8;
+}
+.header .arrow i {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+}
+.header .arrow i:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+  z-index: -1;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.header .arrow i:hover:after {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+  opacity: 0;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.text-effect {
+  color: #f2eded;
+}
+
+section#cont04,
+#cont06,
+#cont08 {
+  background-color: #ffffff;
+}
+.texto-artigo {
+  font-size: 26px;
+  color: #101010;
+  font-weight: 600;
+  margin: 75px auto 25px;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 1.2;
+  width: 50%;
+}
+article h3 {
+  font-weight: 700;
+  font-size: 1.8rem;
+  margin: 0 0 13px 0;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 60px;
+}
+section#cont05,
+#cont07 {
+  background-color: #f7f1f1;
+}
+.dish {
+  overflow: hidden;
+  text-align: justify;
+}
+.dish .filtering span {
+  padding: 8px 20px;
+  margin: 0 5px;
+  color: #777;
+  letter-spacing: 1px;
+  font-weight: 600;
+  font-size: 13px;
+  cursor: pointer;
+  border: 1px solid #eee;
+  border-radius: 10px;
+}
+.dish .filtering .active {
+  color: #fff;
+  background: #c49b66;
+  border-color: #c49b66;
+}
+.dish .filtering .active:after {
+  bottom: 0;
+  top: calc(100% - 1px);
+  opacity: 1;
+}
+.dish .filtering .active:before {
+  top: 0;
+  opacity: 1;
+}
+.dish .items {
+  padding: 0 15px;
+  margin-bottom: 30px;
+}
+.dish .item-img {
+  position: relative;
+  overflow: hidden;
+}
+.dish .item-img h5 {
+  font-size: 18px;
+  position: relative;
+  -webkit-transform: translateY(15px);
+  transform: translateY(15px);
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s;
+  opacity: 0;
+  z-index: 5;
+}
+.dish .item-img h6 {
+  color: #c49b66;
+  font-size: 13px;
+  position: relative;
+  margin-bottom: 10px;
+  -webkit-transform: translateY(-15px);
+  transform: translateY(-15px);
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s;
+  opacity: 0;
+  z-index: 5;
+}
+.dish .item-img .link {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  color: #c49b66;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  z-index: 5;
+  opacity: 0;
+}
+.dish .item-img-overlay {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  background: transparent;
+  z-index: 2;
+}
+.dish .item-img-overlay:before,
+.dish .item-img-overlay:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 50%;
+  background: #fff;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+.dish .item-img-overlay:before {
+  left: 0;
+  top: 0;
+}
+.dish .item-img-overlay:after {
+  right: 0;
+  bottom: 0;
+}
+.dish .item-img-overlay:hover:before,
+.dish .item-img-overlay:hover:after {
+  width: 100%;
+}
+.dish .item-img-overlay:hover h6,
+.dish .item-img-overlay:hover h5,
+.dish .item-img-overlay:hover .link {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 1;
+}
+.logo {
+  padding: 15px 0;
+  width: 90px;
+  font-size: 20px;
+  font-weight: 700;
+  color: #fff;
+}
+.logo:hover {
+  color: #fff;
+}
+
+.history .history-img {
+  padding: 0 10px 0 0;
+  position: relative;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+.history .history-img:hover {
+  padding: 0 0 0 20px;
+}
+.history .history-img:hover:after {
+  background: #c49b66;
+  left: 5px;
+  top: -15px;
+  right: 15px;
+  bottom: 15px;
+}
+.history .history-img:after {
+  content: "";
+  background: #f5f5f5;
+  position: absolute;
+  left: 15px;
+  right: 5px;
+  top: 15px;
+  z-index: -1;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.history .content p {
+  margin-bottom: 15px;
+}
+.history .content p span {
+  font-weight: 700;
+}
+.history .content .social-icon span {
+  width: 40px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  font-size: 18px;
+  border: 1px solid #eee;
+  margin: 15px 5px 15px 0;
+  cursor: pointer;
+  transition: all 0.5s;
+  color: rgb(121, 121, 121);
+}
+.history .content .social-icon span:hover {
+  background: #c49b66;
+  border-color: #c49b66;
+  color: #fff;
+}
+.history .content .button_restaurant {
+  margin-top: 30px;
+}
+
+.contato {
+  background-attachment: fixed;
+}
+.title-contato {
+  font-size: 40px;
+  color: #f0c986;
+  padding: 20px;
+  border-bottom: 1px solid #c49b56;
+}
+.contato .form input[type="text"],
+.contato .form input[type="email"],
+.contato .form textarea {
+  width: 100%;
+  border: 1px solid rgba(134, 127, 127, 0.418);
+  padding: 10px;
+  background: rgba(253, 246, 246, 0.582);
+  color: rgb(59, 55, 55);
+  margin-bottom: 15px;
+}
+.contato .form textarea {
+  height: 160px;
+  max-height: 160px;
+  max-width: 100%;
+}
+.contato .form button {
+  background: transparent;
+  border: 0;
+}
+.contato .info {
+  margin-top: 50px;
+}
+.contato .info .item .icon {
+  float: left;
+  padding-top: 5px;
+  font-size: 25px;
+  color: #c49b66;
+}
+.contato .info .item .cont {
+  margin-left: 45px;
+  padding-left: 15px;
+  border-left: 1px solid #ffffff;
+}
+.contato .info .item .cont h6 {
+  font-size: 14px;
+}
+
+footer {
+  background-color: #596665;
+  position: center;
+  text-align: center;
+}
+
+footer h3 {
+  color: #fff;
+  padding-top: 20%;
+}
+
+footer.chamada-rodape {
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+}
+
+footer .icons-redes-sociais a {
+  font-size: 40px;
+  padding: 0px 15px;
+  padding-top: 20px;
+  color: white;
+}
+
+footer .redes-sociais {
+  margin-top: 10px;
+  color: white !important;
+}
+
+footer.icons-redes-sociais a {
+  font-size: 40px;
+  padding: 0px 18px;
+  padding-top: 20px;
+  color: white;
+}
+
+footer img {
+  width: 250px;
+  height: 90px;
+  margin-top: 70px;
+}
+
+footer .line-icons {
+  width: 100%;
+  padding-bottom: 15px;
+}
+
+footer .line-icons i {
+  color: white;
+  font-size: 18px;
+}
+
+footer .nome-footer {
+  font-size: 14px;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 3px;
+  position: center;
+  text-align: center;
+  border-bottom: 1px solid #fff;
+  padding: 20px 20px;
+  margin: 0px 380px;
+}
+
+footer .footer-logo {
+  padding-top: 25px;
+}
+
+footer .info {
+  color: white;
+  padding-top: 24%;
+}
+
+footer .phone {
+  padding-top: 10px;
+}
+
+footer .email {
+  padding-top: 10px;
+}
+
+@media screen and (max-width: 991px) {
+  .logo{
+    margin-left: 20px;
+  }
+  .text_paragraph{
+    padding-bottom: 30px;
+  }
+  .mb-md50 {
+    margin-bottom: 50px;
+  }
+
+  .mb-md30 {
+    margin-bottom: 30px;
+  }
+
+  .mb-md0 {
+    margin-bottom: 0;
+  }
+
+  .navbar .navbar-collapse {
+    background: rgba(11, 11, 11, 0.534);
+    text-align: center;
+    padding: 10px 0;
+  }
+  .navbar .nav-link {
+    margin: 10px auto !important;
+  }
+
+  .nav-scroll .navbar-collapse .nav-link {
+    color: #fff !important;
+  }
+  .nav-scroll .navbar-collapse .active {
+    color: #c49b66 !important;
+  }
+
+  .header .caption h1 {
+    font-size: 50px;
+  }
+
+
+@media screen and (max-width: 767px) {
+  .logo{
+    margin-left: 20px;
+  }
+  .text-effect{
+    font-size: 34px!important;
+  }
+
+  section .title-contato{
+    margin-top: 40px;
+  }
+  section.contato{
+    padding: 0px 20px;
+  }
+  .dish{
+    padding: 20px;;
+  }
+  .texto-artigo{
+    width: 100%;
+    font-size: 18px;
+  }
+  em{
+    width: 100%;
+    font-size: 18px!important;
+  }
+  h4{
+    font-size: 36px!important;
+  }
+  
+  footer .nome-footer {
+    margin: 0;
+    margin-top: 30px;
+    font-size: 14px!important;
+  }
+}
 }
